--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-social-icons": "^5.6.1",
     "sass": "^1.45.1",
     "web-vitals": "^2.1.2"
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
