Added picture so it's always there"

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -7,7 +7,7 @@
         }
     ],
     "navigationFallback": {
-        "rewrite": "index.html",
+        "rewrite": "/index.html",
         "exclude": [
             "*.{svg,png,jpg,gif}",
             "*.{css,scss}",
